--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
     "stripe": "^11.11.0",
     "ts-node": "^10.9.2",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "zustand": "^4.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
