--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@next/font": "^14.1.0",
     "@prisma/client": "^5.9.1",
+    "@stripe/react-stripe-js": "^1.16.5",
     "@stripe/stripe-js": "^1.46.0",
     "@types/node": "20.11.16",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
+    "framer-motion": "^11.0.3",
     "next": "13.2.4",
     "next-auth": "^4.24.5",
     "react": "18.2.0",
