--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
     "framer-motion": "^11.0.3",
+    "micro": "^10.0.1",
     "next": "13.2.4",
     "next-auth": "^4.24.5",
     "react": "18.2.0",
