--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.5.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next/font": "^14.1.0",
     "@prisma/client": "^5.9.1",
@@ -17,6 +18,7 @@
     "@types/node": "20.11.16",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
+    "daisyui": "^4.6.2",
     "framer-motion": "^11.0.3",
     "micro": "^10.0.1",
     "next": "13.2.4",
